Attempt at ctId support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.docker.compose.
 
 spring.sql.init.mode=never
 
+spring.jpa.show-sql=true
+
 # Database configuration
 datasource.postgres1.url=jdbc:postgresql://localhost:5433/postgres1
 datasource.postgres1.driver-class-name=org.postgresql.Driver
