--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=dbdiffjdbc
 spring.main.banner-mode=off
 logging.level.root=WARN
+logging.level.org.springframework.jdbc.core.JdbcTemplate  =DEBUG
 
 spring.docker.compose.lifecycle-management=start_and_stop
-spring.docker.compose.
 
 spring.sql.init.mode=never
 
-spring.jpa.show-sql=true
 
 # Database configuration
 datasource.postgres1.url=jdbc:postgresql://localhost:5433/postgres1
