--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=dbdiffjdbc
 spring.main.banner-mode=off
-logging.level.root=WARN
-logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.root=off
+#logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 
 spring.docker.compose.lifecycle-management=start_only
 
 spring.sql.init.mode=never
-
 
 # Database configuration
 datasource.postgres1.url=jdbc:postgresql://localhost:5433/postgres1
