--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.main.banner-mode=off
 logging.level.root=off
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 
-spring.docker.compose.lifecycle-management=start_only
+spring.docker.compose.lifecycle-management=start_and_stop
+spring.docker.compose.stop.command=down
 
 spring.sql.init.mode=never
 
